# Toolbag-Windows

./: .env.example  .gitignore  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: adding-tool.md  architecture.md  plan-v0.2-plugin-system.md  release.md  security.md  tool-development-retrospective.md  v0.2-completion-guide.md
scripts/: prepare-tauri-release.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: registry-bundled.json
src-tauri/resources/bundled-plugins/environment-overview/: tool.json  ui.json
src-tauri/src/: commands.rs  database.rs  elevation.rs  environment.rs  errors.rs  lib.rs  main.rs  models.rs  state.rs  updates.rs
src-tauri/src/environment/: scan.rs
src-tauri/src/plugins/: builtin.rs  installer.rs  manifest.rs  mod.rs  perms.rs  registry.rs  runner.rs  signature.rs  store.rs
src-tauri/src/tools/: mod.rs
src/app/: providers.tsx  router.tsx  theme.tsx
src/app/shell/: AddToolDialog.tsx  AppShell.tsx  CommandPalette.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  tab-close-guards.ts  tab-store.ts  useToolRouteSync.ts  workspace-store.test.ts  workspace-store.ts
src/features/about/: AboutPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/logs/: LogsPage.tsx
src/features/marketplace/: MarketplacePage.tsx  useRegistry.ts
src/features/plugins/: PluginsPage.tsx
src/features/settings/: SettingsPage.tsx  settings.test.ts  useSettings.ts
src/features/tools/: ErrorBoundary.tsx  ToolHost.tsx  ToolPage.test.tsx  ToolPage.tsx  ToolView.tsx  display.test.ts  display.ts  registry.test.ts  registry.ts  types.ts  useToolJob.test.tsx  useToolJob.ts  useTools.ts
src/features/updates/: AppUpdatePrompt.tsx  app-update-store.ts
src/features/workbench/: WorkbenchPage.tsx
src/shared/tauri/: commands.ts  plugins.ts  types.ts  validation.ts
src/shared/tools/: manifest.json  manifest.ts
src/shared/ui/: badge.tsx  button.tsx  input.tsx  panel.tsx  switch.tsx
(+33 files in other folders)
