[package]
name = "toolbag"
version = "0.1.0"
description = "A Windows-first local toolkit workbench."
authors = ["LFen"]
edition = "2021"
license = "MIT"
repository = "https://github.com/LFenX/Toolbag-Windows"

[features]
default = []
updater = ["dep:tauri-plugin-updater"]

[lib]
name = "toolbag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-window-state = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
